@@ -1,0 +1,280 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<HTML>
+<HEAD>
+    <META HTTP-EQUIV="CONTENT-TYPE" CONTENT="text/html; charset=utf-8">
+    <TITLE>VMPK. Virtual MIDI Piano Keyboard</TITLE>
+</HEAD>
+<BODY>
+
+<H1>Virtual MIDI Piano Keyboard</H1>
+
+<div id="navcontainer">
+<ul>
+  <li><a href="#Introduction">Introduction</a></li>
+  <li><a href="#Getting_started">Getting started</a>
+    <ul>
+      <li><a href="#MIDI_concepts">MIDI concepts</a></li>
+      <li><a href="#maps_instruments">Keyboard maps and instrument definitions</a></li>
+      <li><a href="#MIDI_Connections">MIDI connections and virtual MIDI cables</a></li>
+    </ul>
+  </li>
+  <li><a href="#Download">Download</a></li>
+  <li><a href="#Installation">Installation from sources</a>
+    <ul>
+      <li><a href="#Requirements">Requirements</a></li>
+      <li><a href="#windows_notes">Notes for windows users</a></li>
+      <li><a href="#packager_notes">Notes for packagers and advanced users</a></li>
+    </ul>
+  </li>
+  <li><a href="#Acknowledgements">Acknowledgements</a></li>
+</ul>
+</div>
+
+<br>
+
+<H2><a name="Introduction"></a>Introduction</H2>
+
+<P>
+Virtual MIDI Piano Keyboard is a MIDI event generator and receiver. It doesn't produce any sound
+by itself, but can be used to drive a MIDI synthesizer (either hardware or
+software, internal or external). You can use the computer's keyboard to play
+MIDI notes, and also the mouse. You can use the Virtual MIDI Piano Keyboard
+to display the played MIDI notes from another instrument or MIDI file player.
+To do so, connect the other MIDI port to the input port of VMPK.</P>
+
+<P>VMPK has been tested in Linux and Windows, but maybe you can build it also in 
+Mac OSX and SGI Irix. If you can compile and test the program in those systems, 
+please drop a mail to the author.</P>
+
+<P>The Virtual Keyboard by Takashi Iway (vkeybd) has been the inspiration for this 
+one. It is a wonderful piece of software and has served us well for many years.
+Thanks!</P>
+
+<P>VMPK uses a modern GUI framework: Qt4, that gives excellent features and 
+performance. <a href="http://www.music.mcgill.ca/~gary/rtmidi/">RtMIDI</a> 
+provides MIDI input/output features. Both frameworks are
+free and platform independent, available for Linux, Windows and Mac OSX.</P>
+
+<P>The alphanumeric keyboard mapping can be configured from inside the program
+using the GUI interface, and the settings are stored in XML files. Some maps
+for Spanish, German and French keyboard layouts are provided, translated from
+the ones provided by VKeybd.</P>
+
+<P>VMPK can send program changes and controllers to a MIDI synth. The definitions 
+for different standards and devices can be provided as .INS files, the same 
+format used by QTractor and TSE3. It was developed by Cakewalk and used also 
+in Sonar.</P>
+
+<P>This software is in a very early alpha stage. See the TODO file for a list of 
+pending features. Please feel free to contact the author to ask questions, 
+report bugs, and propose new features. You can use the tracking system at
+<A HREF="http://sourceforge.net/tracker2/?group_id=236429">SourceForge
+project site</A>.</P>
+<P>Copyright (C) 2008, Pedro Lopez-Cabanillas <B>&lt;plcl AT
+users.sourceforge.net&gt; </B></P>
+<P>Virtual MIDI Piano Keyboard is free software licensed under the terms of the
+<a href="http://www.gnu.org/copyleft/gpl.html">GPL v3 license</a>.</P>
+
+<H2><a name="Getting_started"></a>Getting started</H2>
+
+<H3><a name="MIDI_concepts"></a>MIDI concepts</H3>
+
+<p>MIDI is an industry standard to connect musical instruments. It is based on transmitting the actions 
+performed by a musician playing some instrument to another different instrument.  Musical 
+instruments enabled with MIDI interfaces typically have two DIN sockets labeled MIDI IN and 
+MIDI OUT. Sometimes there is a third socket labeled MIDI THRU.  To connect a MIDI 
+instrument to another one, you need a MIDI cable attached to the MIDI OUT socket of the 
+sending instrument, and to the MIDI IN of the receiving one. You can find more information and
+tutorials like <a href="http://home.roadrunner.com/~jgglatt/tutr/whatmidi.htm">this one</a> all
+around the Net.</p>
+
+<p>There are also hardware MIDI interfaces for computers, providing MIDI IN and OUT ports, 
+where you can attach MIDI cables to communicate the computer with external MIDI 
+instruments. Without needing hardware interfaces, the computer can also use MIDI 
+software. An example is VMPK, which provides MIDI IN and OUT ports. You can attach virtual 
+MIDI cables to the VMPK's ports, to connect the program to other programs or to the 
+computer's physical MIDI interface ports.  More details about this coming later.
+You usually want to connect the MIDI output from VMPK to the input of some synthesizer 
+which transforms MIDI into sound. Another common destination for the connection would 
+be a MIDI monitor that translates MIDI events into readable text. This will help you to 
+understand what kind of information is transmitted using the MIDI protocol. In Linux you can
+try <a href="http://kmetronome.sourceforge.net/kmidimon/">KMidimon</a> and in Windows 
+<a href="http://www.midiox.com">MIDIOX</a>.</p>
+
+<p>VMPK doesn't produce any sound. You need a MIDI software synthesizer to hear the played notes.
+I recommend you to try <a href="http://qsynth.sourceforge.net">QSynth</a>,
+a graphical front-end to <a href="http://www.fluidsynth.org">Fluidsynth</a>. It is also 
+possible to use the "Microsoft GS Wavetable SW Synth" that comes with XP. Of course, an external 
+MIDI hardware synth would be an even better approach.</p>
+
+<H3><a name="maps_instruments"></a>Keyboard maps and instrument definitions</H3>
+
+<p>VMPK can help you to change sounds in your MIDI synthesizer, but only if you provide a 
+definition for the synthesizer sounds first. The definitions are text files with the .INS 
+extension, and the same format used by <a href="http://qtractor.sourceforge.net">Qtractor</a> 
+(Linux), and <a href="http://www.cakewalk.com">Sonar</a> (Windows).</p>
+
+<p>When you start VMPK the first time, you should open the Preferences dialog and choose a definition 
+file, and then select the instrument name among those provided by the definitions file. There should be one 
+instrument definitions file installed in the VMPK's data directory (typically "/usr/share/vmpk" in 
+Linux, and "C:\Program Files\VMPK" in Windows) named "gmgsxg.ins", containing definitions 
+for the General MIDI, Roland GS and Yamaha XG standards. It is a very simple format, and 
+you can use any text editor to look, change, and create a new one. You can find a library of 
+instruments definitions at the 
+<a href="ftp://ftp.cakewalk.com/pub/InstrumentDefinitions/">cakewalk ftp server</a>.</p>
+
+<p>Another customization that you may want to tweak is the keyboard mapping. The default 
+layout maps about two and half octaves for the QWERTY alphanumeric keyboard, but there 
+are some more definitions in the data directory, adapted for other international layouts. You 
+can even define your own mapping using a dialog box available in the Edit->Keyboard map menu. 
+There are also options to load and save the maps as XML files. The last loaded map will be 
+remembered the next time you start VMPK. In fact, all your preferences, selected MIDI bank 
+and program, and the controller values will be saved on exit, and restored when you restart 
+VMPK the next time.</p>
+
+<H3><a name="MIDI_Connections"></a>MIDI connections and virtual MIDI cables</H3>
+
+<p>To connect hardware MIDI devices you need physical MIDI cables. To connect MIDI software 
+you need virtual cables. In Windows you can use some virtual MIDI cable software, like 
+<a href="http://www.midiox.com/myoke.htm">MIDI Yoke</a>, Maple, 
+<a href="http://www.nerds.de/en/loopbe1.html">LoopBe1</a> or 
+<a href="http://www.sonycreativesoftware.com/dl/dl.aspx?dwnid=77">Sony Virtual MIDI Router</a>. 
+
+<p>MIDI Yoke setup process will install the driver and a control panel applet to change the number 
+of MIDI ports that will be available (you need to restart the computer after changing this setting). 
+MIDI Yoke works sending every MIDI event written to an OUT port to the corresponding IN port. 
+For instance, VMPK can connect the output to the port 1, and another program like 
+<a href="http://qsynth.sourceforge.net">QSynth</a>  can read the same events from the port 1.</p>
+
+<p>Using <a href="http://www.midiox.com/moxdown.htm">MIDIOX</a> you can add more routes between 
+MIDI Yoke ports and other system MIDI ports. This program also provides other interesting 
+functionalities, like a MIDI file player. You can listen the songs played in a MIDI Synth and at 
+the same time see the played notes (only one channel at a time) in VMPK. To do so, you can use the 
+"Routes" window in MIDIOX to connect the input port 1 to the Windows Synth port. Also, configure 
+the player's MIDI port to send to MIDI Yoke 1. And configure VMPK Input port to read from MIDI Yoke 1. 
+The player will send the events to the out port 1, which will be routed to both the input port 1 
+and at the same time to the synth port.</p>
+
+<p>In Linux, you have <a href="http://www.alsa-project.org">ALSA</a> sequencer to provide the 
+virtual cables. The ports are dynamically created when you start a program, so there is not a 
+fixed number of them like in MIDI Yoke.
+The command line utility "aconnect" allows to connect and disconnect the virtual MIDI cables 
+between any ports, being hardware interfaces or applications. A nice GUI utility for doing the 
+same is <a href="http://qjackctl.sourceforge.net">QJackCtl</a>. The main purpose of this 
+program is to control the Jack daemon (start, stop and monitor the state). Jack provides virtual 
+audio cables to connect your sound card ports and audio programs, in a similar way to the MIDI 
+virtual cables, but for digital audio data.</p>
+
+<H2><a name="Download"></a>Download</H2>
+<P>You can find the latest version at <A HREF="http://sourceforge.net/projects/vmpk">SourceForge project site</A>.</P>
+<p>There are ready to install packages for:
+<ul>
+  <li>openSUSE, from <a href="http://software.opensuse.org/search?baseproject=ALL&amp;p=1&amp;q=vmpk">the openSUSE Build Service</a>.</li>
+  <li>Ubuntu, by <a href="http://ubuntufromscratch.wordpress.com/2008/09/14/virtual-midi-piano-keyboard">Ubuntu From Scratch</a>.</li>
+</ul>
+<p>If you distribute VMPK packages for any distro, please drop me an email and I will add a link to your site here.</p>
+
+<H2><a name="Installation"></a>Installation from sources</H2>
+
+<P>Download the sources from <a href="http://sourceforge.net/projects/vmpk">http://sourceforge.net/projects/vmpk</a>.
+Unpack the sources in your home directory, and change to the unpacked dir.</P>
+
+<pre>
+$ cd vmpk-x.y.z
+</pre>
+
+<P>You can choose between CMake and Qmake to prepare the build system, but qmake is
+intended only for testing and development.</P>
+
+<pre>
+$ cmake .
+or
+$ ccmake .
+or
+$ qmake
+</pre>
+
+<P>After that, compile the program:</P>
+
+<pre>
+$ make
+</pre>
+
+<P>If the program has been compiled sucessfully, you can install it:</P>
+
+<pre>
+$ sudo make install
+</pre>
+
+<H3><a name="Requirements"></a>Requirements</H3>
+
+<P>In order to successfully build and use VMPK, you need Qt 4.3 or newer. 
+(install the -devel package for your system, or <a href="http://trolltech.com/downloads/opensource">download the open source edition</a> from Trolltech.)</P>
+
+<P><a href="http://www.music.mcgill.ca/~gary/rtmidi/">RtMIDI</a> is included in the source package. It uses ALSA sequencer in Linux, 
+WinMM in Windows and CoreMIDI in Mac OSX, which are the native MIDI systems in each supported platform.</P>
+
+<P>The build system is based on <a href="http://www.cmake.org">CMake</a>.</P>
+
+<P>You need also the <a href="http://gcc.gnu.org">GCC C++ compiler</a>. MinGW is a <a href="http://www.mingw.org">Windows port</a>.</P>
+
+<P>Optionally, you can buid a Windows setup program using <a href="http://nsis.sourceforge.net">NSIS</a>.</P>
+
+
+<H3><a name="windows_notes"></a>Notes for windows users</H3>
+
+<P>To compile the sources in Windows, you need to download either the .bz2 or .gz 
+archive and uncompress it using any utility that supports the format, like 
+<a href="http://www.7-zip.org">7-Zip</a>.</P>
+
+<P>To configure the sources, you need qmake (from Qt4) or CMake. You need to set
+the PATH including the directories for Qt4 binaries, MinGW binaries, and also
+CMake binaries. The program CMakeSetup.exe is the graphic version of CMake for
+Windows.</P>
+
+<H3><a name="packager_notes"></a>Notes for packagers and advanced users</H3>
+
+<p>You can ask the compiler for some optimisation when building the program.
+There are two ways: first, using a predefined build type.</p>
+
+<pre>
+$ cmake . -DCMAKE_BUILD_TYPE=Release
+</pre>
+
+<p>The CMake "Release" type uses the compiler flags: "-O3 -DNDEBUG". Other
+predefined build types are "Debug", "RelWithDebInfo", and "MinSizeRel".
+The second way is to choose the compiler flags yourself.</p>
+
+<pre>
+$ export CXXFLAGS="-O2 -march=native -mtune=native -DNDEBUG"
+$ cmake .
+</pre>
+
+<p>You need to find the better CXXFLAGS for your own system.</p>
+
+<p>If you want to install the program at some place other than the default
+(/usr/local) use the following CMake option:</p>
+
+<pre>
+$ cmake . -DCMAKE_INSTALL_PREFIX=/usr
+</pre>
+
+<p></p>
+
+<H2><a name="Acknowledgements"></a>Acknowledgements</H2>
+
+<P>In addition to the aforementioned tools, VMPK uses work from the following
+open source projects. </P>
+
+<ul>
+<li>from <a href="http://qtractor.sourceforge.net">Qtractor</a>, by Rui Nuno Capela<br>
+Instrument definition data classes
+<li>from <a href="http://qsynth.sourceforge.net">QSynth</a>, by Rui Nuno Capela<br>
+Knob widget
+<li><a href="http://openclipart.org/media/files/TheresaKnott/346">Icon and logo</a> by Theresa Knott
+</ul>
+
+<P>Thank you very much!</P>
+
+</BODY>
+</HTML>
